Change LicenseUrl to License
LicenseUrl is deprecated

--- a/ResultSharp/ResultSharp.csproj
+++ b/ResultSharp/ResultSharp.csproj
@@ -13,7 +13,7 @@
 		<Summary>Result monad for C#</Summary>
 		<PackageTags>C#, Functional, Monad, Pattern Matching, Result, Error handling</PackageTags>
 		<PackageProjectUrl>https://github.com/nekronos/ResultSharp</PackageProjectUrl>
-		<PackageLicenseUrl>https://github.com/nekronos/ResultSharp/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageLicense>https://github.com/nekronos/ResultSharp/blob/master/LICENSE</PackageLicense>
 	</PropertyGroup>
 
 </Project>
