--- a/ResultSharp/ResultSharp.csproj
+++ b/ResultSharp/ResultSharp.csproj
@@ -9,6 +9,7 @@
 	<PropertyGroup>
 		<PackageId>ResultSharp</PackageId>
 		<Title>ResultSharp</Title>
+		<PackageVersion>0.1.0</PackageVersion>
 		<Authors>Vegard Strand Lende</Authors>
 		<Summary>Result monad for C#</Summary>
 		<PackageTags>C#, Functional, Monad, Pattern Matching, Result, Error handling</PackageTags>
