--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,3 +24,8 @@ jobs:
       run: dotnet pack --configuration Release --no-restore --output nuget-package
     - name: Push
       run: dotnet nuget push nuget-package/*.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: package
+        path: nuget-package/*.nupkg
