--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           dotnet-version: 3.1.101
       - name: Build project
         run: dotnet publish ResultSharp/ResultSharp.csproj --configuration Release --output bin
-      - Name: Zip Assets
+      - name: Zip Assets
         run: |
           zip --junk-paths artifact bin/*.dll
       - name: Create Release
