--- a/ResultSharp.Tests/ResultSharp.Tests.csproj
+++ b/ResultSharp.Tests/ResultSharp.Tests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5</TargetFramework>
+		<LangVersion>9.0</LangVersion>
 		<Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
