--- a/ResultSharp/ResultSharp.csproj
+++ b/ResultSharp/ResultSharp.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<LangVersion>8.0</LangVersion>
+		<TargetFramework>net5</TargetFramework>
+		<LangVersion>9.0</LangVersion>
 		<OutputType>library</OutputType>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
