--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 5.0.301
+      - name: .net version
+        run: dotnet --version
       - name: Build project
         run: dotnet publish ResultSharp/ResultSharp.csproj --configuration Release --output bin
       - name: Zip Assets
