--- a/ResultSharp.Tests/ResultSharp.Tests.csproj
+++ b/ResultSharp.Tests/ResultSharp.Tests.csproj
@@ -8,7 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
@@ -16,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FluentAssertions.ResultSharp\FluentAssertions.ResultSharp.csproj" />
     <ProjectReference Include="..\ResultSharp\ResultSharp.csproj" />
   </ItemGroup>
 
