Revert "Prevent build in test step"
This reverts commit 0f7061d6e04564dd6a8145d3b130b358f595cb2a.

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build
       run: dotnet build --configuration Debug --no-restore
     - name: Test
-      run: dotnet test --no-build --no-restore --verbosity normal
+      run: dotnet test --no-restore --verbosity normal
